# Josa.Visitor

./: .gitignore  CMakeLists.txt  README.md
include/josa/: visitor.hpp
include/josa/visitor/: common.hpp  double_dispatch.hpp  hierarchy.hpp  list.hpp  overload.hpp  single_dispatch.hpp
test/: CMakeLists.txt  colors.hpp  example-regex.cpp  shapes.hpp  test-double-dispatch.cpp  test-single-dispatch.cpp  types.hpp
